[package]
name = "ckb-vm-pprof"
version = "0.1.0"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "ckb-vm-pprof"
path = "src/main.rs"

[dependencies]
addr2line = "0.13.0"
ckb-vm = "0.20.0-rc2"
clap = "2.33"
memmap = "0.7"
object = "0.20"
