[package]
name = "ckb-vm-pprof"
version = "0.2.1"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "ckb-vm-pprof"
path = "src/main.rs"

[features]
default = ["detect-asm"]
asm = ["ckb-vm/asm"]
detect-asm = ["ckb-vm/detect-asm"]

[dependencies]
addr2line = "0.13.0"
ckb-vm = { version = "0.20.0-rc5", features = ["detect-asm"] }
clap = "2.33"
object = "0.20"
goblin = "0.4"
